Prevented horizontal scrolling

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,6 +31,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     height: 100%;
     margin: 0px;
     color: #ffffff;
